sidepanel: fix iOS flex wrap layout 2

--- a/src/browser/scss/_sidepanel.scss
+++ b/src/browser/scss/_sidepanel.scss
@@ -77,12 +77,9 @@
     display: flex;
     align-items: stretch;
     flex-wrap:wrap;
-    flex: 1 1 33%;
     .title {
+        flex: 1 1 100%;
         background: var(--color-faded);
-        width: 100%;
-        min-width: 100%;
-        flex-grow: 2;
         padding: 10rem;
         position: relative;
         &.disabled {
@@ -101,8 +98,7 @@
 
     }
     a {
-        min-width:33%;
-        flex-grow:4;
+        flex: 4 1 33%;
         padding:10rem;
         display: block;
         text-align: center;
